# linux_binder

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  binder.c  binder.h  binder_klog.sh  build.sh  client.c  mount.sh  run.sh  server.c
app/: App.cpp  App.h  AppCallback.cpp  AppCallback.hpp  AppRunner.cpp  AppRunner.hpp  main.cpp
app/adapters/: AudioSrvAdapter.cpp  AudioSrvAdapter.h  LedSrvAdapter.cpp  LedSrvAdapter.h
base/: Handler.cpp  Handler.h  MessageQueue.h
binder/: BinderClient.h  ServiceManager.cpp
binder/callback/: BnAudioSrvCallback.cpp  BnAudioSrvCallback.h  BnLedSrvCallback.h  BnSrvCallback.h  BpAudioSrvCallback.cpp  BpLedSrvCallback.cpp  BpLedSrvCallback.h  ILedSrvCallback.h  ISrvCallback.h  SrvCallbackRegistry.h
binder/callback/interfaces/: IAudioSrvCallback.h  ILedSrvCallback.h  ISrvCallback.h
binder/callback/native/: BnAudioSrvCallback.cpp  BnAudioSrvCallback.h  BnLedSrvCallback.cpp  BnLedSrvCallback.h  BnSrvCallback.cpp  BnSrvCallback.h
binder/callback/proxy/: BpAudioSrvCallback.cpp  BpAudioSrvCallback.h  BpLedSrvCallback.cpp  BpLedSrvCallback.h  BpSrvCallback.cpp  BpSrvCallback.h
binder/callback/registry/: SrvCallbackRegistry.cpp  SrvCallbackRegistry.h
binder/core/: BinderClient.cpp  BinderClient.h  BinderSrvMgr.cpp  BinderSrvMgr.h  BinderUtils.h  Parcel.cpp  Parcel.h  TransactionCode.h
binder/manager/: BnSrvMgr.cpp  BnSrvMgr.h  BpSrvMgr.cpp  BpSrvMgr.h  ISrvMgr.h  SrvMgr.cpp  SrvMgr.h  main.cpp
binder/srv/: BnSrvManager.h  BpSrvManager.h  ISrvManager.h  SrvManager.cpp  SrvManager.h  SrvManagerApp.cpp
binder/srv/audio/: BnAudioSrv.cpp  BnAudioSrv.h  BpAudioSrv.cpp  BpAudioSrv.h  IAudioSrv.h
binder/srv/led/: BnLedSrv.cpp  BnLedSrv.h  BpLedSrv.cpp  BpLedSrv.h  ILedSrv.h
core/: BinderClient.cpp  BinderCore.cpp  BinderCore.hpp  BinderUtils.h  Parcel.cpp  Parcel.hpp  ServiceManager.cpp  ServiceManager.h  TransactionCode.h  TxnCodes.hpp
core/callback/: BnAudioSrvCallback.cpp  BnLedSrvCallback.cpp  BnSrvCallback.cpp  BpAudioSrvCallback.cpp  BpAudioSrvCallback.h  BpLedSrvCallback.cpp  BpSrvCallback.cpp  BpSrvCallback.h  IAudioSrvCallback.h  SrvCallbackRegistry.cpp
core/manager/: BnSrvManager.cpp  BpSrvManager.cpp  SrvManager.cpp  SrvManagerApp.cpp  SrvManagerApp.h  main.cpp
driver/: binder.c  binder.h
srv/: AudioSrvIpc.cpp  AudioSrvIpc.hpp  LedSrvIpc.cpp  LedSrvIpc.hpp  SrvCallbackIpc.cpp  SrvCallbackIpc.hpp  SrvCallbackRegistry.cpp  SrvCallbackRegistry.hpp  SrvManagerIpc.cpp  SrvManagerIpc.hpp
srv/audio/: AudioSrv.cpp  AudioSrv.h  AudioSrvApp.cpp  AudioSrvApp.h  AudioSrvApp.hpp  AudioSrvHost.cpp  AudioSrvHost.hpp  BnAudioSrv.cpp  BnAudioSrv.h  BpAudioSrv.cpp  BpAudioSrv.h  IAudioSrv.h  main.cpp
srv/audio-service/: AudioSrv.cpp  AudioSrv.h  main.cpp
srv/led/: BnLedSrv.cpp  BnLedSrv.h  BpLedSrv.cpp  BpLedSrv.h  ILedSrv.h  LedSrv.cpp  LedSrv.h  LedSrvApp.cpp  LedSrvApp.h  LedSrvApp.hpp  LedSrvHost.cpp  LedSrvHost.hpp  main.cpp
srv/led-service/: LedSrv.cpp  LedSrv.h  main.cpp
srv/manager/: SrvManagerApp.cpp  SrvManagerApp.hpp  SrvManagerHost.cpp  SrvManagerHost.hpp  main.cpp
